--- a/HR_Page/index.html
+++ b/HR_Page/index.html
@@ -563,7 +563,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'http://65.2.149.3:3053/api';
         let allTasks = []; // Store all tasks for filtering
 
         document.addEventListener("DOMContentLoaded", function() {
